parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement
Rule 2     statement -> expression
Rule 3     statement -> if_statement
Rule 4     statement -> loop
Rule 5     statement -> assign
Rule 6     statement -> print
Rule 7     statement -> COMMENT
Rule 8     arith_stmt -> expression arithm_symbol expression
Rule 9     arith_stmt -> expression error term
Rule 10    expression -> symbol
Rule 11    expression -> compar_stmt
Rule 12    expression -> arith_stmt
Rule 13    symbol -> arithm_symbol
Rule 14    symbol -> compar_symbol
Rule 15    arithm_symbol -> PLUS
Rule 16    arithm_symbol -> MINUS
Rule 17    arithm_symbol -> DIVIDE
Rule 18    arithm_symbol -> TIMES
Rule 19    arithm_symbol -> MODULUS
Rule 20    compar_symbol -> GREATER_THAN
Rule 21    compar_symbol -> LESS_THAN
Rule 22    compar_symbol -> EQUAL
Rule 23    compar_symbol -> NOT_EQUAL
Rule 24    compar_symbol -> GREATER_EQUAL
Rule 25    compar_symbol -> LESS_EQUAL
Rule 26    arith_stmt -> IDENTIFIER arithm_symbol term
Rule 27    arith_stmt -> IDENTIFIER error term
Rule 28    compar_stmt -> factor compar_symbol factor
Rule 29    compar_stmt -> factor error factor
Rule 30    compar_stmt -> IDENTIFIER compar_symbol IDENTIFIER
Rule 31    compar_stmt -> IDENTIFIER compar_symbol factor
Rule 32    compar_stmt -> IDENTIFIER error factor
Rule 33    compar_stmt -> IDENTIFIER error IDENTIFIER
Rule 34    expression -> term
Rule 35    term -> factor
Rule 36    arith_symbol -> factor arithm_symbol factor
Rule 37    factor -> NUMBA
Rule 38    factor -> DECI
Rule 39    term -> IDENTIFIER
Rule 40    factor -> OPENBRACE expression CLOSEBRACE
Rule 41    if_statement -> DOUBLE_LESS EF OPENBRACE compar_stmt CLOSEBRACE DEN statement DOUBLE_GREATER
Rule 42    if_statement -> DOUBLE_LESS EF OPENBRACE compar_stmt CLOSEBRACE DEN statement EFNOT statement DOUBLE_GREATER
Rule 43    if_statement -> DOUBLE_LESS EF OPENBRACE compar_stmt CLOSEBRACE DEN statement OREF OPENBRACE compar_stmt CLOSEBRACE DEN statement EFNOT statement DOUBLE_GREATER
Rule 44    if_statement -> DOUBLE_LESS EF OPENBRACE error CLOSEBRACE DEN statement DOUBLE_GREATER
Rule 45    loop -> DOUBLE_LESS WEN IDENTIFIER IN expression COLON statement DOUBLE_GREATER
Rule 46    loop -> DOUBLE_LESS WEN IDENTIFIER IN expression COMMA expression COLON statement DOUBLE_GREATER
Rule 47    assign -> IDENTIFIER ASSIGNMENT expression
Rule 48    assign -> IDENTIFIER ASSIGNMENT WUD
Rule 49    assign -> IDENTIFIER ASSIGNMENT LETTA
Rule 50    assign -> IDENTIFIER ASSIGNMENT WHICHEVA
Rule 51    print -> SHOW OPENBRACE IDENTIFIER CLOSEBRACE
Rule 52    print -> SHOW OPENBRACE factor CLOSEBRACE
Rule 53    print -> SHOW OPENBRACE WUD CLOSEBRACE
Rule 54    print -> SHOW OPENBRACE LETTA CLOSEBRACE
Rule 55    print -> SHOW OPENBRACE error CLOSEBRACE

Terminals, with rules where they appear

ASSIGNMENT           : 47 48 49 50
CLOSEBRACE           : 40 41 42 43 43 44 51 52 53 54 55
COLON                : 45 46
COMMA                : 46
COMMENT              : 7
DECI                 : 38
DEN                  : 41 42 43 43 44
DIVIDE               : 17
DOUBLE_GREATER       : 41 42 43 44 45 46
DOUBLE_LESS          : 41 42 43 44 45 46
EF                   : 41 42 43 44
EFNOT                : 42 43
EQUAL                : 22
GREATER_EQUAL        : 24
GREATER_THAN         : 20
IDENTIFIER           : 26 27 30 30 31 32 33 33 39 45 46 47 48 49 50 51
IN                   : 45 46
LESS_EQUAL           : 25
LESS_THAN            : 21
LETTA                : 49 54
MINUS                : 16
MODULUS              : 19
NOT_EQUAL            : 23
NUMBA                : 37
OPENBRACE            : 40 41 42 43 43 44 51 52 53 54 55
OREF                 : 43
PLUS                 : 15
SHOW                 : 51 52 53 54 55
TIMES                : 18
WEN                  : 45 46
WHICHEVA             : 50
WUD                  : 48 53
error                : 9 27 29 32 33 44 55

Nonterminals, with rules where they appear

arith_stmt           : 12
arith_symbol         : 
arithm_symbol        : 8 13 26 36
assign               : 5
compar_stmt          : 11 41 42 43 43
compar_symbol        : 14 28 30 31
expression           : 2 8 8 9 40 45 46 46 47
factor               : 28 28 29 29 31 32 35 36 36 52
if_statement         : 3
loop                 : 4
print                : 6
program              : 0
statement            : 1 41 42 42 43 43 43 44 45 46
symbol               : 10
term                 : 9 26 27 34

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement
    (2) statement -> . expression
    (3) statement -> . if_statement
    (4) statement -> . loop
    (5) statement -> . assign
    (6) statement -> . print
    (7) statement -> . COMMENT
    (10) expression -> . symbol
    (11) expression -> . compar_stmt
    (12) expression -> . arith_stmt
    (34) expression -> . term
    (41) if_statement -> . DOUBLE_LESS EF OPENBRACE compar_stmt CLOSEBRACE DEN statement DOUBLE_GREATER
    (42) if_statement -> . DOUBLE_LESS EF OPENBRACE compar_stmt CLOSEBRACE DEN statement EFNOT statement DOUBLE_GREATER
    (43) if_statement -> . DOUBLE_LESS EF OPENBRACE compar_stmt CLOSEBRACE DEN statement OREF OPENBRACE compar_stmt CLOSEBRACE DEN statement EFNOT statement DOUBLE_GREATER
    (44) if_statement -> . DOUBLE_LESS EF OPENBRACE error CLOSEBRACE DEN statement DOUBLE_GREATER
    (45) loop -> . DOUBLE_LESS WEN IDENTIFIER IN expression COLON statement DOUBLE_GREATER
    (46) loop -> . DOUBLE_LESS WEN IDENTIFIER IN expression COMMA expression COLON statement DOUBLE_GREATER
    (47) assign -> . IDENTIFIER ASSIGNMENT expression
    (48) assign -> . IDENTIFIER ASSIGNMENT WUD
    (49) assign -> . IDENTIFIER ASSIGNMENT LETTA
    (50) assign -> . IDENTIFIER ASSIGNMENT WHICHEVA
    (51) print -> . SHOW OPENBRACE IDENTIFIER CLOSEBRACE
    (52) print -> . SHOW OPENBRACE factor CLOSEBRACE
    (53) print -> . SHOW OPENBRACE WUD CLOSEBRACE
    (54) print -> . SHOW OPENBRACE LETTA CLOSEBRACE
    (55) print -> . SHOW OPENBRACE error CLOSEBRACE
    (13) symbol -> . arithm_symbol
    (14) symbol -> . compar_symbol
    (28) compar_stmt -> . factor compar_symbol factor
    (29) compar_stmt -> . factor error factor
    (30) compar_stmt -> . IDENTIFIER compar_symbol IDENTIFIER
    (31) compar_stmt -> . IDENTIFIER compar_symbol factor
    (32) compar_stmt -> . IDENTIFIER error factor
    (33) compar_stmt -> . IDENTIFIER error IDENTIFIER
    (8) arith_stmt -> . expression arithm_symbol expression
    (9) arith_stmt -> . expression error term
    (26) arith_stmt -> . IDENTIFIER arithm_symbol term
    (27) arith_stmt -> . IDENTIFIER error term
    (35) term -> . factor
    (39) term -> . IDENTIFIER
    (15) arithm_symbol -> . PLUS
    (16) arithm_symbol -> . MINUS
    (17) arithm_symbol -> . DIVIDE
    (18) arithm_symbol -> . TIMES
    (19) arithm_symbol -> . MODULUS
    (20) compar_symbol -> . GREATER_THAN
    (21) compar_symbol -> . LESS_THAN
    (22) compar_symbol -> . EQUAL
    (23) compar_symbol -> . NOT_EQUAL
    (24) compar_symbol -> . GREATER_EQUAL
    (25) compar_symbol -> . LESS_EQUAL
    (37) factor -> . NUMBA
    (38) factor -> . DECI
    (40) factor -> . OPENBRACE expression CLOSEBRACE

    COMMENT         shift and go to state 8
    DOUBLE_LESS     shift and go to state 13
    IDENTIFIER      shift and go to state 15
    SHOW            shift and go to state 16
    PLUS            shift and go to state 20
    MINUS           shift and go to state 21
    DIVIDE          shift and go to state 22
    TIMES           shift and go to state 23
    MODULUS         shift and go to state 24
    GREATER_THAN    shift and go to state 25
    LESS_THAN       shift and go to state 26
    EQUAL           shift and go to state 27
    NOT_EQUAL       shift and go to state 28
    GREATER_EQUAL   shift and go to state 29
    LESS_EQUAL      shift and go to state 30
    NUMBA           shift and go to state 31
    DECI            shift and go to state 32
    OPENBRACE       shift and go to state 14

    program                        shift and go to state 1
    statement                      shift and go to state 2
    expression                     shift and go to state 3
    if_statement                   shift and go to state 4
    loop                           shift and go to state 5
    assign                         shift and go to state 6
    print                          shift and go to state 7
    symbol                         shift and go to state 9
    compar_stmt                    shift and go to state 10
    arith_stmt                     shift and go to state 11
    term                           shift and go to state 12
    factor                         shift and go to state 17
    arithm_symbol                  shift and go to state 18
    compar_symbol                  shift and go to state 19

state 1

    (0) S' -> program .



state 2

    (1) program -> statement .

    $end            reduce using rule 1 (program -> statement .)


state 3

    (2) statement -> expression .
    (8) arith_stmt -> expression . arithm_symbol expression
    (9) arith_stmt -> expression . error term
    (15) arithm_symbol -> . PLUS
    (16) arithm_symbol -> . MINUS
    (17) arithm_symbol -> . DIVIDE
    (18) arithm_symbol -> . TIMES
    (19) arithm_symbol -> . MODULUS

    $end            reduce using rule 2 (statement -> expression .)
    DOUBLE_GREATER  reduce using rule 2 (statement -> expression .)
    EFNOT           reduce using rule 2 (statement -> expression .)
    OREF            reduce using rule 2 (statement -> expression .)
    error           shift and go to state 34
    PLUS            shift and go to state 20
    MINUS           shift and go to state 21
    DIVIDE          shift and go to state 22
    TIMES           shift and go to state 23
    MODULUS         shift and go to state 24

    arithm_symbol                  shift and go to state 33

state 4

    (3) statement -> if_statement .

    $end            reduce using rule 3 (statement -> if_statement .)
    DOUBLE_GREATER  reduce using rule 3 (statement -> if_statement .)
    EFNOT           reduce using rule 3 (statement -> if_statement .)
    OREF            reduce using rule 3 (statement -> if_statement .)


state 5

    (4) statement -> loop .

    $end            reduce using rule 4 (statement -> loop .)
    DOUBLE_GREATER  reduce using rule 4 (statement -> loop .)
    EFNOT           reduce using rule 4 (statement -> loop .)
    OREF            reduce using rule 4 (statement -> loop .)


state 6

    (5) statement -> assign .

    $end            reduce using rule 5 (statement -> assign .)
    DOUBLE_GREATER  reduce using rule 5 (statement -> assign .)
    EFNOT           reduce using rule 5 (statement -> assign .)
    OREF            reduce using rule 5 (statement -> assign .)


state 7

    (6) statement -> print .

    $end            reduce using rule 6 (statement -> print .)
    DOUBLE_GREATER  reduce using rule 6 (statement -> print .)
    EFNOT           reduce using rule 6 (statement -> print .)
    OREF            reduce using rule 6 (statement -> print .)


state 8

    (7) statement -> COMMENT .

    $end            reduce using rule 7 (statement -> COMMENT .)
    DOUBLE_GREATER  reduce using rule 7 (statement -> COMMENT .)
    EFNOT           reduce using rule 7 (statement -> COMMENT .)
    OREF            reduce using rule 7 (statement -> COMMENT .)


state 9

    (10) expression -> symbol .

    error           reduce using rule 10 (expression -> symbol .)
    PLUS            reduce using rule 10 (expression -> symbol .)
    MINUS           reduce using rule 10 (expression -> symbol .)
    DIVIDE          reduce using rule 10 (expression -> symbol .)
    TIMES           reduce using rule 10 (expression -> symbol .)
    MODULUS         reduce using rule 10 (expression -> symbol .)
    $end            reduce using rule 10 (expression -> symbol .)
    CLOSEBRACE      reduce using rule 10 (expression -> symbol .)
    DOUBLE_GREATER  reduce using rule 10 (expression -> symbol .)
    EFNOT           reduce using rule 10 (expression -> symbol .)
    OREF            reduce using rule 10 (expression -> symbol .)
    COLON           reduce using rule 10 (expression -> symbol .)
    COMMA           reduce using rule 10 (expression -> symbol .)


state 10

    (11) expression -> compar_stmt .

    error           reduce using rule 11 (expression -> compar_stmt .)
    PLUS            reduce using rule 11 (expression -> compar_stmt .)
    MINUS           reduce using rule 11 (expression -> compar_stmt .)
    DIVIDE          reduce using rule 11 (expression -> compar_stmt .)
    TIMES           reduce using rule 11 (expression -> compar_stmt .)
    MODULUS         reduce using rule 11 (expression -> compar_stmt .)
    $end            reduce using rule 11 (expression -> compar_stmt .)
    CLOSEBRACE      reduce using rule 11 (expression -> compar_stmt .)
    DOUBLE_GREATER  reduce using rule 11 (expression -> compar_stmt .)
    EFNOT           reduce using rule 11 (expression -> compar_stmt .)
    OREF            reduce using rule 11 (expression -> compar_stmt .)
    COLON           reduce using rule 11 (expression -> compar_stmt .)
    COMMA           reduce using rule 11 (expression -> compar_stmt .)


state 11

    (12) expression -> arith_stmt .

    error           reduce using rule 12 (expression -> arith_stmt .)
    PLUS            reduce using rule 12 (expression -> arith_stmt .)
    MINUS           reduce using rule 12 (expression -> arith_stmt .)
    DIVIDE          reduce using rule 12 (expression -> arith_stmt .)
    TIMES           reduce using rule 12 (expression -> arith_stmt .)
    MODULUS         reduce using rule 12 (expression -> arith_stmt .)
    $end            reduce using rule 12 (expression -> arith_stmt .)
    CLOSEBRACE      reduce using rule 12 (expression -> arith_stmt .)
    DOUBLE_GREATER  reduce using rule 12 (expression -> arith_stmt .)
    EFNOT           reduce using rule 12 (expression -> arith_stmt .)
    OREF            reduce using rule 12 (expression -> arith_stmt .)
    COLON           reduce using rule 12 (expression -> arith_stmt .)
    COMMA           reduce using rule 12 (expression -> arith_stmt .)


state 12

    (34) expression -> term .

    error           reduce using rule 34 (expression -> term .)
    PLUS            reduce using rule 34 (expression -> term .)
    MINUS           reduce using rule 34 (expression -> term .)
    DIVIDE          reduce using rule 34 (expression -> term .)
    TIMES           reduce using rule 34 (expression -> term .)
    MODULUS         reduce using rule 34 (expression -> term .)
    $end            reduce using rule 34 (expression -> term .)
    CLOSEBRACE      reduce using rule 34 (expression -> term .)
    DOUBLE_GREATER  reduce using rule 34 (expression -> term .)
    EFNOT           reduce using rule 34 (expression -> term .)
    OREF            reduce using rule 34 (expression -> term .)
    COLON           reduce using rule 34 (expression -> term .)
    COMMA           reduce using rule 34 (expression -> term .)


state 13

    (41) if_statement -> DOUBLE_LESS . EF OPENBRACE compar_stmt CLOSEBRACE DEN statement DOUBLE_GREATER
    (42) if_statement -> DOUBLE_LESS . EF OPENBRACE compar_stmt CLOSEBRACE DEN statement EFNOT statement DOUBLE_GREATER
    (43) if_statement -> DOUBLE_LESS . EF OPENBRACE compar_stmt CLOSEBRACE DEN statement OREF OPENBRACE compar_stmt CLOSEBRACE DEN statement EFNOT statement DOUBLE_GREATER
    (44) if_statement -> DOUBLE_LESS . EF OPENBRACE error CLOSEBRACE DEN statement DOUBLE_GREATER
    (45) loop -> DOUBLE_LESS . WEN IDENTIFIER IN expression COLON statement DOUBLE_GREATER
    (46) loop -> DOUBLE_LESS . WEN IDENTIFIER IN expression COMMA expression COLON statement DOUBLE_GREATER

    EF              shift and go to state 35
    WEN             shift and go to state 36


state 14

    (40) factor -> OPENBRACE . expression CLOSEBRACE
    (10) expression -> . symbol
    (11) expression -> . compar_stmt
    (12) expression -> . arith_stmt
    (34) expression -> . term
    (13) symbol -> . arithm_symbol
    (14) symbol -> . compar_symbol
    (28) compar_stmt -> . factor compar_symbol factor
    (29) compar_stmt -> . factor error factor
    (30) compar_stmt -> . IDENTIFIER compar_symbol IDENTIFIER
    (31) compar_stmt -> . IDENTIFIER compar_symbol factor
    (32) compar_stmt -> . IDENTIFIER error factor
    (33) compar_stmt -> . IDENTIFIER error IDENTIFIER
    (8) arith_stmt -> . expression arithm_symbol expression
    (9) arith_stmt -> . expression error term
    (26) arith_stmt -> . IDENTIFIER arithm_symbol term
    (27) arith_stmt -> . IDENTIFIER error term
    (35) term -> . factor
    (39) term -> . IDENTIFIER
    (15) arithm_symbol -> . PLUS
    (16) arithm_symbol -> . MINUS
    (17) arithm_symbol -> . DIVIDE
    (18) arithm_symbol -> . TIMES
    (19) arithm_symbol -> . MODULUS
    (20) compar_symbol -> . GREATER_THAN
    (21) compar_symbol -> . LESS_THAN
    (22) compar_symbol -> . EQUAL
    (23) compar_symbol -> . NOT_EQUAL
    (24) compar_symbol -> . GREATER_EQUAL
    (25) compar_symbol -> . LESS_EQUAL
    (37) factor -> . NUMBA
    (38) factor -> . DECI
    (40) factor -> . OPENBRACE expression CLOSEBRACE

    IDENTIFIER      shift and go to state 38
    PLUS            shift and go to state 20
    MINUS           shift and go to state 21
    DIVIDE          shift and go to state 22
    TIMES           shift and go to state 23
    MODULUS         shift and go to state 24
    GREATER_THAN    shift and go to state 25
    LESS_THAN       shift and go to state 26
    EQUAL           shift and go to state 27
    NOT_EQUAL       shift and go to state 28
    GREATER_EQUAL   shift and go to state 29
    LESS_EQUAL      shift and go to state 30
    NUMBA           shift and go to state 31
    DECI            shift and go to state 32
    OPENBRACE       shift and go to state 14

    expression                     shift and go to state 37
    symbol                         shift and go to state 9
    compar_stmt                    shift and go to state 10
    arith_stmt                     shift and go to state 11
    term                           shift and go to state 12
    arithm_symbol                  shift and go to state 18
    compar_symbol                  shift and go to state 19
    factor                         shift and go to state 17

state 15

    (47) assign -> IDENTIFIER . ASSIGNMENT expression
    (48) assign -> IDENTIFIER . ASSIGNMENT WUD
    (49) assign -> IDENTIFIER . ASSIGNMENT LETTA
    (50) assign -> IDENTIFIER . ASSIGNMENT WHICHEVA
    (30) compar_stmt -> IDENTIFIER . compar_symbol IDENTIFIER
    (31) compar_stmt -> IDENTIFIER . compar_symbol factor
    (32) compar_stmt -> IDENTIFIER . error factor
    (33) compar_stmt -> IDENTIFIER . error IDENTIFIER
    (26) arith_stmt -> IDENTIFIER . arithm_symbol term
    (27) arith_stmt -> IDENTIFIER . error term
    (39) term -> IDENTIFIER .
    (20) compar_symbol -> . GREATER_THAN
    (21) compar_symbol -> . LESS_THAN
    (22) compar_symbol -> . EQUAL
    (23) compar_symbol -> . NOT_EQUAL
    (24) compar_symbol -> . GREATER_EQUAL
    (25) compar_symbol -> . LESS_EQUAL
    (15) arithm_symbol -> . PLUS
    (16) arithm_symbol -> . MINUS
    (17) arithm_symbol -> . DIVIDE
    (18) arithm_symbol -> . TIMES
    (19) arithm_symbol -> . MODULUS

  ! shift/reduce conflict for error resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for MODULUS resolved as shift
    ASSIGNMENT      shift and go to state 39
    error           shift and go to state 41
    $end            reduce using rule 39 (term -> IDENTIFIER .)
    DOUBLE_GREATER  reduce using rule 39 (term -> IDENTIFIER .)
    EFNOT           reduce using rule 39 (term -> IDENTIFIER .)
    OREF            reduce using rule 39 (term -> IDENTIFIER .)
    GREATER_THAN    shift and go to state 25
    LESS_THAN       shift and go to state 26
    EQUAL           shift and go to state 27
    NOT_EQUAL       shift and go to state 28
    GREATER_EQUAL   shift and go to state 29
    LESS_EQUAL      shift and go to state 30
    PLUS            shift and go to state 20
    MINUS           shift and go to state 21
    DIVIDE          shift and go to state 22
    TIMES           shift and go to state 23
    MODULUS         shift and go to state 24

  ! error           [ reduce using rule 39 (term -> IDENTIFIER .) ]
  ! PLUS            [ reduce using rule 39 (term -> IDENTIFIER .) ]
  ! MINUS           [ reduce using rule 39 (term -> IDENTIFIER .) ]
  ! DIVIDE          [ reduce using rule 39 (term -> IDENTIFIER .) ]
  ! TIMES           [ reduce using rule 39 (term -> IDENTIFIER .) ]
  ! MODULUS         [ reduce using rule 39 (term -> IDENTIFIER .) ]

    compar_symbol                  shift and go to state 40
    arithm_symbol                  shift and go to state 42

state 16

    (51) print -> SHOW . OPENBRACE IDENTIFIER CLOSEBRACE
    (52) print -> SHOW . OPENBRACE factor CLOSEBRACE
    (53) print -> SHOW . OPENBRACE WUD CLOSEBRACE
    (54) print -> SHOW . OPENBRACE LETTA CLOSEBRACE
    (55) print -> SHOW . OPENBRACE error CLOSEBRACE

    OPENBRACE       shift and go to state 43


state 17

    (28) compar_stmt -> factor . compar_symbol factor
    (29) compar_stmt -> factor . error factor
    (35) term -> factor .
    (20) compar_symbol -> . GREATER_THAN
    (21) compar_symbol -> . LESS_THAN
    (22) compar_symbol -> . EQUAL
    (23) compar_symbol -> . NOT_EQUAL
    (24) compar_symbol -> . GREATER_EQUAL
    (25) compar_symbol -> . LESS_EQUAL

  ! shift/reduce conflict for error resolved as shift
    error           shift and go to state 45
    PLUS            reduce using rule 35 (term -> factor .)
    MINUS           reduce using rule 35 (term -> factor .)
    DIVIDE          reduce using rule 35 (term -> factor .)
    TIMES           reduce using rule 35 (term -> factor .)
    MODULUS         reduce using rule 35 (term -> factor .)
    $end            reduce using rule 35 (term -> factor .)
    CLOSEBRACE      reduce using rule 35 (term -> factor .)
    DOUBLE_GREATER  reduce using rule 35 (term -> factor .)
    EFNOT           reduce using rule 35 (term -> factor .)
    OREF            reduce using rule 35 (term -> factor .)
    COLON           reduce using rule 35 (term -> factor .)
    COMMA           reduce using rule 35 (term -> factor .)
    GREATER_THAN    shift and go to state 25
    LESS_THAN       shift and go to state 26
    EQUAL           shift and go to state 27
    NOT_EQUAL       shift and go to state 28
    GREATER_EQUAL   shift and go to state 29
    LESS_EQUAL      shift and go to state 30

  ! error           [ reduce using rule 35 (term -> factor .) ]

    compar_symbol                  shift and go to state 44

state 18

    (13) symbol -> arithm_symbol .

    error           reduce using rule 13 (symbol -> arithm_symbol .)
    PLUS            reduce using rule 13 (symbol -> arithm_symbol .)
    MINUS           reduce using rule 13 (symbol -> arithm_symbol .)
    DIVIDE          reduce using rule 13 (symbol -> arithm_symbol .)
    TIMES           reduce using rule 13 (symbol -> arithm_symbol .)
    MODULUS         reduce using rule 13 (symbol -> arithm_symbol .)
    $end            reduce using rule 13 (symbol -> arithm_symbol .)
    CLOSEBRACE      reduce using rule 13 (symbol -> arithm_symbol .)
    DOUBLE_GREATER  reduce using rule 13 (symbol -> arithm_symbol .)
    EFNOT           reduce using rule 13 (symbol -> arithm_symbol .)
    OREF            reduce using rule 13 (symbol -> arithm_symbol .)
    COLON           reduce using rule 13 (symbol -> arithm_symbol .)
    COMMA           reduce using rule 13 (symbol -> arithm_symbol .)


state 19

    (14) symbol -> compar_symbol .

    error           reduce using rule 14 (symbol -> compar_symbol .)
    PLUS            reduce using rule 14 (symbol -> compar_symbol .)
    MINUS           reduce using rule 14 (symbol -> compar_symbol .)
    DIVIDE          reduce using rule 14 (symbol -> compar_symbol .)
    TIMES           reduce using rule 14 (symbol -> compar_symbol .)
    MODULUS         reduce using rule 14 (symbol -> compar_symbol .)
    $end            reduce using rule 14 (symbol -> compar_symbol .)
    CLOSEBRACE      reduce using rule 14 (symbol -> compar_symbol .)
    DOUBLE_GREATER  reduce using rule 14 (symbol -> compar_symbol .)
    EFNOT           reduce using rule 14 (symbol -> compar_symbol .)
    OREF            reduce using rule 14 (symbol -> compar_symbol .)
    COLON           reduce using rule 14 (symbol -> compar_symbol .)
    COMMA           reduce using rule 14 (symbol -> compar_symbol .)


state 20

    (15) arithm_symbol -> PLUS .

    error           reduce using rule 15 (arithm_symbol -> PLUS .)
    PLUS            reduce using rule 15 (arithm_symbol -> PLUS .)
    MINUS           reduce using rule 15 (arithm_symbol -> PLUS .)
    DIVIDE          reduce using rule 15 (arithm_symbol -> PLUS .)
    TIMES           reduce using rule 15 (arithm_symbol -> PLUS .)
    MODULUS         reduce using rule 15 (arithm_symbol -> PLUS .)
    $end            reduce using rule 15 (arithm_symbol -> PLUS .)
    IDENTIFIER      reduce using rule 15 (arithm_symbol -> PLUS .)
    GREATER_THAN    reduce using rule 15 (arithm_symbol -> PLUS .)
    LESS_THAN       reduce using rule 15 (arithm_symbol -> PLUS .)
    EQUAL           reduce using rule 15 (arithm_symbol -> PLUS .)
    NOT_EQUAL       reduce using rule 15 (arithm_symbol -> PLUS .)
    GREATER_EQUAL   reduce using rule 15 (arithm_symbol -> PLUS .)
    LESS_EQUAL      reduce using rule 15 (arithm_symbol -> PLUS .)
    NUMBA           reduce using rule 15 (arithm_symbol -> PLUS .)
    DECI            reduce using rule 15 (arithm_symbol -> PLUS .)
    OPENBRACE       reduce using rule 15 (arithm_symbol -> PLUS .)
    CLOSEBRACE      reduce using rule 15 (arithm_symbol -> PLUS .)
    DOUBLE_GREATER  reduce using rule 15 (arithm_symbol -> PLUS .)
    EFNOT           reduce using rule 15 (arithm_symbol -> PLUS .)
    OREF            reduce using rule 15 (arithm_symbol -> PLUS .)
    COLON           reduce using rule 15 (arithm_symbol -> PLUS .)
    COMMA           reduce using rule 15 (arithm_symbol -> PLUS .)


state 21

    (16) arithm_symbol -> MINUS .

    error           reduce using rule 16 (arithm_symbol -> MINUS .)
    PLUS            reduce using rule 16 (arithm_symbol -> MINUS .)
    MINUS           reduce using rule 16 (arithm_symbol -> MINUS .)
    DIVIDE          reduce using rule 16 (arithm_symbol -> MINUS .)
    TIMES           reduce using rule 16 (arithm_symbol -> MINUS .)
    MODULUS         reduce using rule 16 (arithm_symbol -> MINUS .)
    $end            reduce using rule 16 (arithm_symbol -> MINUS .)
    IDENTIFIER      reduce using rule 16 (arithm_symbol -> MINUS .)
    GREATER_THAN    reduce using rule 16 (arithm_symbol -> MINUS .)
    LESS_THAN       reduce using rule 16 (arithm_symbol -> MINUS .)
    EQUAL           reduce using rule 16 (arithm_symbol -> MINUS .)
    NOT_EQUAL       reduce using rule 16 (arithm_symbol -> MINUS .)
    GREATER_EQUAL   reduce using rule 16 (arithm_symbol -> MINUS .)
    LESS_EQUAL      reduce using rule 16 (arithm_symbol -> MINUS .)
    NUMBA           reduce using rule 16 (arithm_symbol -> MINUS .)
    DECI            reduce using rule 16 (arithm_symbol -> MINUS .)
    OPENBRACE       reduce using rule 16 (arithm_symbol -> MINUS .)
    CLOSEBRACE      reduce using rule 16 (arithm_symbol -> MINUS .)
    DOUBLE_GREATER  reduce using rule 16 (arithm_symbol -> MINUS .)
    EFNOT           reduce using rule 16 (arithm_symbol -> MINUS .)
    OREF            reduce using rule 16 (arithm_symbol -> MINUS .)
    COLON           reduce using rule 16 (arithm_symbol -> MINUS .)
    COMMA           reduce using rule 16 (arithm_symbol -> MINUS .)


state 22

    (17) arithm_symbol -> DIVIDE .

    error           reduce using rule 17 (arithm_symbol -> DIVIDE .)
    PLUS            reduce using rule 17 (arithm_symbol -> DIVIDE .)
    MINUS           reduce using rule 17 (arithm_symbol -> DIVIDE .)
    DIVIDE          reduce using rule 17 (arithm_symbol -> DIVIDE .)
    TIMES           reduce using rule 17 (arithm_symbol -> DIVIDE .)
    MODULUS         reduce using rule 17 (arithm_symbol -> DIVIDE .)
    $end            reduce using rule 17 (arithm_symbol -> DIVIDE .)
    IDENTIFIER      reduce using rule 17 (arithm_symbol -> DIVIDE .)
    GREATER_THAN    reduce using rule 17 (arithm_symbol -> DIVIDE .)
    LESS_THAN       reduce using rule 17 (arithm_symbol -> DIVIDE .)
    EQUAL           reduce using rule 17 (arithm_symbol -> DIVIDE .)
    NOT_EQUAL       reduce using rule 17 (arithm_symbol -> DIVIDE .)
    GREATER_EQUAL   reduce using rule 17 (arithm_symbol -> DIVIDE .)
    LESS_EQUAL      reduce using rule 17 (arithm_symbol -> DIVIDE .)
    NUMBA           reduce using rule 17 (arithm_symbol -> DIVIDE .)
    DECI            reduce using rule 17 (arithm_symbol -> DIVIDE .)
    OPENBRACE       reduce using rule 17 (arithm_symbol -> DIVIDE .)
    CLOSEBRACE      reduce using rule 17 (arithm_symbol -> DIVIDE .)
    DOUBLE_GREATER  reduce using rule 17 (arithm_symbol -> DIVIDE .)
    EFNOT           reduce using rule 17 (arithm_symbol -> DIVIDE .)
    OREF            reduce using rule 17 (arithm_symbol -> DIVIDE .)
    COLON           reduce using rule 17 (arithm_symbol -> DIVIDE .)
    COMMA           reduce using rule 17 (arithm_symbol -> DIVIDE .)


state 23

    (18) arithm_symbol -> TIMES .
